# helpseller

./: .gitignore  COMO_USAR.md  DEBUG_CALLS.md  DEBUG_QUERIES.sql  FINAL_SETUP.sql  QUICKSTART.md  cloudbuild.yaml  melhoriasv2.md  participant_debug.js
.github/workflows/: helpseller-backend-AutoDeployTrigger-8f745445-6d71-44c3-94fb-23240ead4970.yml
backend/: .dockerignore  Dockerfile  add_external_id.sql  calls.json  check-latest.js  check-transcript.js  check_my_profile.sql  debug.txt  debug_triggers.sql  fix_relationships.sql  latest_call.txt  package-lock.json  package.json  promote_to_manager.sql  recent_calls.json  redis-dump.json  rls_policies.sql  rls_team_management.sql  stats.js  stats.txt  summary.json  test-whisper.ts  transcript_out.json  update_trigger.sql
backend/docs/: expected-tables-reference.md
backend/src/: server.ts
dashboard/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
dashboard/scripts/: create-stripe-extra-hours.ts
docs/: billing-setup.md  deploy-gcp.md  deploy.md  livekit-extension-publisher.md  pagarme-checkout-integration-plan.md
extension/: .env.development  .env.example  .env.production  .gitignore  README.md  dist.crx  dist.pem  index.html  manifest.json  package-lock.json  package.json  popup.html  vite.config.ts
scripts/: create-stripe-extra-hours.ts
services/: .env.example  README.md  REDIS_SETUP.md  SETUP_WINDOWS.md  docker-compose.yml
services/ai-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/ai-service/app/: __init__.py  main.py
(+251 files in other folders)
